# shako

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  train.yml
balancer/: __init__.py  analyzer.py  optimizer.py
cli/: main.py
core/: __init__.py  base_adapter.py  base_agent.py  engine.py  stats.py  types.py
games/cards/: __init__.py  adapter.py  rules.md
games/connect4/: Challenge.md  adapter.py  rules.md
games/connect4/models/selfplay/rows=6/cols=7/connect=4/: 20260618_012559.pkl
games/ludo/: adapter.py  rules.md
games/nim/: Challenge.md  __init__.py  adapter.py  eval.py  rules.md
games/odin/: adapter.py  rules.md
games/odin/models/selfplay/n_players=4/points_limit=15/: 20260712_084527.pkl  20260713_114240.pkl
games/seven_families/: adapter.py  rules.md
games/tictactoe/: Challenge.md  adapter.py  rules.md
games/tictactoe/models/selfplay/starting_player=alternate/max_rounds=9/: 20260709_161550.pkl
llm/: __init__.py  adapter_generator.py  eval_generator.py
rl/: __init__.py  greedy_agent.py  human_agent.py  mcts_agent.py  random_agent.py  self_play.py
scripts/: README.md  train.py
tests/: test_balance.py  test_balancer.py  test_cards.py  test_connect4.py  test_engine.py  test_generators.py  test_ludo.py  test_mcts.py  test_nim.py  test_odin.py  test_self_play.py  test_seven_families.py  test_tictactoe.py
ui/: grid_widget.py  rich_agent.py  textual_agent.py  textual_app.py
viz/: plots.py
(+1 files in other folders)
