[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shako"
version = "0.1.0"
description = "Game balancing framework using RL, MCTS, and LLM agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
