[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shako"
version = "0.1.0"
description = "Game balancing framework using RL, MCTS, and LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "optuna>=4.0",
  "rich>=13.0",
  "matplotlib>=3.8",
]

[project.urls]
"Home Page" = "https://github.com/Mara-tech/shako"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["arg-type", "type-arg"]

[tool.ruff]
line-length = 100
